--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/LockTheme">
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/TransTheme">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +27,10 @@
             android:launchMode="singleInstance"
             android:theme="@style/TransTheme" />
 
-        <receiver android:name="com.ethanco.customlockscreendemo.LockSelfStartReceiver">
-            <intent-filter>
+        <receiver android:name="com.ethanco.customlockscreendemo.LockSelfStartReceiver"
+            >
+            <intent-filter
+                android:priority="2147483647">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
