--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="com.ethanco.customlockscreendemo">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,21 +21,6 @@
             android:name=".MyLockScreenActivity"
             android:launchMode="singleInstance"
             android:theme="@style/LockTheme" />
-
-        <activity
-            android:name=".MyLockScreenPreActivity"
-            android:launchMode="singleInstance"
-            android:theme="@style/TransTheme" />
-
-        <receiver android:name="com.ethanco.customlockscreendemo.LockSelfStartReceiver"
-            >
-            <intent-filter
-                android:priority="2147483647">
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
